--- a/client/components/admin/AddEmployee/AddEmployee.css
+++ b/client/components/admin/AddEmployee/AddEmployee.css
@@ -1,3 +1,25 @@
+.add_employee_modal_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+  z-index: 1000; /* Ensure the modal overlay is above other content */
+}
+
+.add_employee_modal_content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Drop shadow effect */
+  z-index: 1001; /* Ensure the modal content is above the overlay */
+}
+
 .add_employee {
   display: block;
   border: 3px solid black;
